# thalamus-serve

./: CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  publish.yml
examples/deploy/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
examples/deploy/src/: __init__.py  main.py
examples/hf_model/: README.md  sentiment.py
examples/sklearn/: README.md  iris_classifier.py  medical_cost.py
examples/torch/: README.md  classifier.py
examples/vanilla/: vanilla.py
thalamus_serve/: __init__.py  config.py
thalamus_serve/core/: app.py  middleware.py  model.py  routes.py  sagemaker.py
thalamus_serve/infra/: cache.py  gpu.py
thalamus_serve/observability/: metrics.py  middleware.py
thalamus_serve/schemas/: api.py  common.py  storage.py
thalamus_serve/storage/: fetch.py
thalamus_serve/tests/: conftest.py  test_capacity.py  test_require_gpu.py  test_sagemaker.py  test_service_contract.py
