[project]
name = "thalamus-serve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.42.27",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "huggingface-hub>=1.3.1",
    "prometheus-client>=0.24.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "structlog>=25.5.0",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.9.1",
]
